@@ -6,6 +6,11 @@
   now able to decrypt and display encrypted parts of multipart messages.
 * A 'show' command was introduced to make the raw MIME-encoded message text
   visible.
+* Modifications to messages made using the 'edit' and 'visual' commands do
+  no longer cause changes to the current folder. This is the behavior demanded
+  by POSIX.1-2004. MIME decoding and decryption are now performed before each
+  message is passed to the editor. If you prefer the old behavior, set the new
+  'writebackedited' variable.
 * The handling of read-only compressed mbox format folders was fixed.
 * In version 11.12, fcntl() read locking was erroneusly introduced for files
   other than system mailboxes too. It is now disabled for such files again.
